tests/NormalTests/paczka1/fuzzy1/37442070.err
Error in line 1: ieGa7SdsIR A419 16,9
Error in line 4: ieGa7SdsIR S567 602,8
Error in line 6: XmGsZZ3u S866 86,3
Error in line 14: ieGa7SdsIR S866 44,06
Error in line 13: ieGa7SdsIR S567 81,0
Error in line 10: XmGsZZ3u S567 68,3
Error in line 20: ieGa7SdsIR S866 74,0
Error in line 34: Re0dKMie S393 91,9
Error in line 35: ieGa7SdsIR S393 23,1
